<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.jmoral.dam2.practicaevaluable1.SecondActivity">

    <Button
        android:text="@string/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAceptar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloNombre2"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextNombre"
                android:layout_weight="0.7"
                android:hint="@string/escriba_nombre" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloEdad2"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingBottom="@dimen/activity_vertical_margin_edad" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center">

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:max="17"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMostrarEdad"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:hint="@string/seekbar_defecto" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloTelefono2"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextTelefono"
                android:layout_weight="0.7"
                android:hint="@string/escriba_telefono" />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/buttonAceptar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="96dp">

        <ToggleButton
            android:text="@string/obtener_coordenadas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleButtonCoordenadas"
            android:textOn="@string/obtener_coordenadas"
            android:textOff="@string/obtener_coordenadas"
            android:textAllCaps="false"
            android:checked="false" />

        <TableLayout
            android:id="@+id/tablaCoordenadas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:text="@string/latitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLatitud2"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMostrarLatitud" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:text="@string/longitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewLongitud2"
                    android:textStyle="normal|bold"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMostrarLongitud" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</RelativeLayout>
