<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.jmoral.dam2.practicaevaluable1.MainActivity"
    android:padding="20dp">

    <Button
        android:text="@string/editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEditar"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:layout_above="@+id/buttonMaps"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloNombre"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:hint="@string/sin_datos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewNombreDevuelto"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/edad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloEdad"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:hint="@string/sin_datos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEdadDevuelto"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/telefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTituloTelefono"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:hint="@string/sin_datos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTelefonoDevuelto"
                android:layout_weight="0.7" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/ubicacion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUbicacionVisible"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="16sp"
                android:textColor="@android:color/black" />

            <TextView
                android:hint="@string/sin_datos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLatitudDevuelto"
                android:layout_weight="0.7" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUbicacionNoVisible"
                android:layout_weight="0.3"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLongitudDevuelto"
                android:layout_weight="0.7"
                android:layout_margin="0dp" />

        </TableRow>
    </TableLayout>

    <Button
        android:text="@string/verMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:id="@+id/buttonMaps"
        android:layout_above="@+id/buttonEditar"
        android:layout_centerHorizontal="true"
        android:enabled="false" />
</RelativeLayout>
